--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,178 +1,92 @@
-/* すべての要素に対して box-sizing: border-box; を指定 */
-*{
-  box-sizing:border-box;
-}
-/* リンクの下線消去 */
-a{
-  text-decoration:none;
-}
-li{
-  list-style:none;
-}
-body{
-  /* 要素の幅の上限指定 */
-  max-width:1400px;
-  /* 画面幅によってwidhtが変わるように設定 */
-  width:100%;
-  /* 要素を中央に配置 */
-  margin:0 auto;
+body {
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN";
 }
 
-.header-top{
-  max-width:1400px;
-  width:100%;
-  background-color: rgba(34, 49, 52, 1);
-  color:white;
+a {
+  text-decoration: none;
+}
+
+header{
   height:50px;
-}
-.header-top p{
-  float:left;
-  margin:0 0 0 10px;
-  line-height: 50px;
-}
-.header-top a{
-  float:right;
-  margin:0 10px 0 0;
-  line-height: 50px;
-  color:white;
-}
-.registration:hover{
-  transition:0.3s;
-  background-color: rgba(255,255,255,0.5);
-}
-.registration:active{
-  color:black;
-}
-.login:hover{
-  transition:0.3s;
-  background-color: rgba(255,255,255,0.5);
-}
-.login:active{
-  color:black;
-}
-.ifa-navi:hover{
-  transition:0.3s;
-  background-color: rgba(255,255,255,0.5);
-}
-.ifa-navi:active{
-  color:black;
-}
-
-.header-second{
-  max-width:1400px;
   width:100%;
-  background-color: rgba(192, 192, 192, 1);
-  color:white;
-  height:80px;
+  background-color:rgba(34,49,52,0.9);
+  position:fixed;
+  top:0;
+  z-index:10;
 }
-.header-second h1{
+.header-left{
   float:left;
-  line-height:80px;
-  margin:0 0 0 10px;
 }
-.header-second ul{
-  height:80px;
-  width:300px;
-  padding:0 0 0 0;
-  margin:0;
+.logo {
+  margin-top:10px;
+  width: 160px;
+}
+.header-right{
+  margin-top:11px;
+  margin-right:5px;
   float:right;
+  font-weight:bold;
 }
-.service{
-  line-height:40px;
-  text-align:center;
+.btn {
+  font-size:13px;
+  padding: 4px 8px;
+  color: white;
+  display: inline-block;
 }
-.tel{
-  line-height:30px;
-  width:80px;
-  margin:3px 3px 3px 20px;
-  padding:0;
-  text-align:center;
-  float:left;
-  border:2px white solid;
-  border-radius:10px;
+
+.signup{
+  border-radius:4px;
+  background-color: #239b76;
 }
-.tel-number{
-  line-height:40px;
-  margin:0 0 0 10px;
-  float:left;
-  font-size:23px;
-}
-.header-second a{
-  float:right;
-  /* display:none; */
-  color:white;
-  font-size:20px;
+
+.top-wrapper{
+  width:100%;
+  height:700px;
 }
 
 
-.main{
-  height:1000px;
+footer{
+  height:50px;
+  width:100%;
+  background-color:rgba(34,49,52,0.9);
 }
-.main-top{
-  height:500px;
+
+.top-main{
+  margin-top:50px;
+  width: 100%;
+  height:180px;
+  background-image: url("/main.jpg");
   background-size:cover;
 }
-.main-top h2{
-  margin:0;
-  line-height:500px;
-  font-size:40px;
+.copy{
+  padding-top:20px;
+  padding-left:10px;
   color:white;
+  font-family:serif;
+  line-height:5px;
+  font-size:25px;
+  font-weight:bold;
+}
+span{
+  font-size:40px;
+  color:#DAA520;
+}
+.menu-1{
+  margin:10px 20px;
+  border:1px solid rgba(34,49,52,0.9);
+  border-radius:2px;
   text-align:center;
 }
-.main-second{
-  height:500px;
+.menu-1-1{
+  color:rgba(34,49,52,0.9)
 }
-.menu{
-  height:200px;
-  background-color:#f7f7f7;
-  width:25%;
-  float:left;
-}
-.menu-box{
-  margin:0 10px;
-}
-.menu-box h4{
-  margin-top:10px;
-}
-.one{
-  background-color:white;
-  text-align:center;
-  }
-.two{
-  background-color:white;
-  text-align:center;
-  }
-.three{
-  background-color:white;
-  text-align:center;
-  }
-.four{
-  background-color:white;
+.menu-2{
+  margin:10px 20px;
+  border:1px solid rgba(34,49,52,0.9);
+  border-radius:2px;
   text-align:center;
 }
-
-
-
-
-.footer-top ul{
-  margin:0;
-}
-.footer-top{
-  height:30px;
-  max-width:1400px;
-  width:100%;
-  background-color: #f8f8f8;
-}
-.footer-top li{
-  float:left;
-}
-.footer-second{
-  height:50px;
-  max-width:1400px;
-  width:100%;
-  background-color: #f8f8f8;
-}
-.footer-second li{
-  float:left;
-  background-color: #eee;
+.menu-2-2{
+  color:rgba(34,49,52,0.9);
 }
